--- a/css/main.css
+++ b/css/main.css
@@ -869,8 +869,10 @@ article h4:hover {
 /* message dialogue */
 #support-customer-dialogue {
   position: sticky;
-  width: 250px;
-  top: 20%;
+  width: 180px;
+  height: 120px;
+  background-color: #012619c4;
+  top: 100px;
   left: 100%;
   border-radius: 5px;
 }
