--- a/css/ipad.css
+++ b/css/ipad.css
@@ -1,31 +1,60 @@
 @media(max-width : 769px) {
+
+  /* news main page */
+  .news .news-right .item .item-link .item-link-title {
+    padding-right: 1.5rem;
+  }
+
+  .news .news-left .news-text {
+    top: 48%;
+    color: #222;
+  }
+
+  .news .news-right .item img {
+    height: 80px;
+  }
+
+  .news .news-left .news-text h4 {
+    line-height: 1.2;
+    font-size: 1.4rem;
+  }
+
+  /* showcase */
   #show-case .form-find form {
     width: 87%;
     margin-left: 25px;
   }
+
   #filter-hotel {
     width: 100%;
   }
+
   #filter-hotel .container {
     width: 100%;
   }
+
   #list-hotels-result .container {
     display: flex;
     flex-direction: column;
   }
+
   #filter-hotel .container .group-choices .search-box-filter input {
     height: 30px;
     margin-top: 5px;
   }
-   #list-hotels-result .container .sub-search-filter ul {
-     font-size: 0.73rem;
-   }
-   #filter-hotel .group-choices ul li.list-choices .choice {
-     padding: 8px 16px;
-   }
+
+  #list-hotels-result .container .sub-search-filter ul {
+    font-size: 0.73rem;
+  }
+
+  #filter-hotel .group-choices ul li.list-choices .choice {
+    padding: 8px 16px;
+  }
+
   #filter-hotel .group-choices ul {
     width: 100vw;
   }
+
   #list-hotels-result .container main {
     order: 1;
     width: 100%;
@@ -37,18 +66,22 @@
     width: 100%;
     border-right: none;
   }
- #list-hotels-result main .hotel-items .item .list-extra-img {
-   width: 98%;
- }
+
+  #list-hotels-result main .hotel-items .item .list-extra-img {
+    width: 98%;
+  }
+
   #list-hotels-result .container aside .list-aside-hotel .items {
     display: grid;
     grid-gap: 1rem;
     padding-left: 35px;
     grid-template-columns: 1fr 1fr;
   }
-#list-hotels-result main .hotel-items .item .hotel-item-price {
-  width: 20%;
-}
+
+  #list-hotels-result main .hotel-items .item .hotel-item-price {
+    width: 20%;
+  }
+
   #list-hotels-result .container aside .list-aside-hotel .items .item {
     border-bottom: none;
   }
