--- a/css/mobile.css
+++ b/css/mobile.css
@@ -17,8 +17,37 @@
   }
 
   /* news details page 1 */
+  .news-details-1 .container {
+    width: 100vw;
+    margin: 0;
+  }
+
+  .news-details-1 .container .news .news-left {
+    margin-left: 2rem;
+  }
+
+  .news-details-1 .container .news .news-left img {
+    width: 300px;
+    margin-left: 0rem;
+    margin-top: 1rem;
+  }
+
+  .news-details-1 .container .news .news-left p,
+  .news-details-1 .container .news .news-left h3 {
+    width: 85vw;
+    padding: 0;
+  }
+
   .news-details-1 .container .news .news-right {
-    width: 100%;
+    margin-left: 2rem;
+  }
+
+  .news-details-1 .container .news .news-right .item {
+    width: 45vw;
+  }
+
+  .news-details-1 .container .news .news-right .item img {
+    width: 80%;
   }
 
   /* search result */
@@ -528,6 +557,16 @@
 /* ip 6,7,8  */
 @media(max-width : 400px) {
 
+  /* social icon details news */
+  .news-details-1 .container .news .news-left .social-share a{
+    margin-top: 0.4rem;
+    display: inline-block;
+  }
+
+  .news-details-1 .container .news .news-left .news-1-social-share-top {
+    display: none;
+  }
+
   /* news page */
   #hot-news .news .news-left {
     width: 70%;
@@ -669,23 +708,28 @@
 
 /* ip5 */
 @media(max-width : 330px) {
+
   /* comment part - search page */
-  #experiences .comments div.text-medium{
+  #experiences .comments div.text-medium {
     font-size: 1rem;
   }
-#experiences .comments div.text-medium + p{
-  font-size: 0.9rem;
-}
+
+  #experiences .comments div.text-medium+p {
+    font-size: 0.9rem;
+  }
+
   /* experience section */
   #experiences .box .description-banner img {
     width: 240px;
     border-radius: 5px;
     opacity: 0.8;
   }
+
   /* map to hotel section */
   #other-hotels .container .cards .card img {
     width: 230px;
   }
+
   /* hotel result page */
   #list-hotels-result main .hotel-items .item .hotel-item-content .hotel-item-img .header-img img {
     width: 240px;
@@ -906,4 +950,13 @@
     height: 180px;
   }
 
+  /* news 1 details */
+  .news-details-1 .container .news .news-left img {
+    width: 250px;
+  }
+
+  /* .news-details-1 .container .news .news-left .social-share a{
+     margin-top: 0.5rem;
+    display: inline-block;
+   } */
 }
