--- a/css/main.css
+++ b/css/main.css
@@ -638,9 +638,10 @@ h4 {
 	margin-bottom: 20px;
 }
 
+/* 
 #combo-deals .cards .card .hotel-infos .choosed i {
 	color: green;
-}
+} */
 
 #combo-deals .cards .card .hotel-infos .choosed:hover i {
 	color: #f2f2f2;
