--- a/css/main.css
+++ b/css/main.css
@@ -826,16 +826,18 @@ article h4:hover {
 }
 
 #sign-up .container form input[type="email"] {
-	height: 45px;
+	height: 40px;
 	width: 300px;
 	border-radius: 3px;
 	outline: none;
 	border: none;
 	padding-left: 20px;
 }
-
+#sign-up .container form input[type="submit"] {
+  padding: 13px 16px;
+}
 #sign-up .container .text-info h4 {
-	font-size: 1.6rem;
+	font-size: 1.5rem;
 }
 
 #sign-up .container .text-info p {
