--- a/css/main.css
+++ b/css/main.css
@@ -126,9 +126,11 @@ a:hover {
 .my-1 {
 	margin: 0.5rem 0;
 }
+
 .mb-2 {
 	margin-bottom: 0.75rem;
 }
+
 .my-2 {
 	margin: 0.75rem 0;
 }
@@ -440,6 +442,7 @@ h4 {
 	background-color: var(--logo-color);
 	color: var(--light-color);
 }
+
 .m-center {
 	display: block;
 	margin: auto;
@@ -489,6 +492,10 @@ h4 {
 	font-size: 1.5rem;
 }
 
+#header .main-nav .main-logo-box a:hover {
+	color: #fff;
+}
+
 #header .main-nav .nav-bar li ul.sub-language {
 	display: none;
 }
@@ -514,6 +521,7 @@ h4 {
 	height: 5px;
 	background-color: rgb(231, 222, 222);
 	margin-top: 3px;
+	border-radius: 2px;
 }
 
 /* showcase area */
@@ -661,12 +669,7 @@ h4 {
 }
 
 #combo-deals .cards .card .hotel-infos .hotel-price .hotel-price-sale,
-#combo-deals
-	.cards
-	.card
-	.hotel-infos
-	.hotel-price
-	.hotel-price-sale-percent-number {
+#combo-deals .cards .card .hotel-infos .hotel-price .hotel-price-sale-percent-number {
 	color: rgb(209, 19, 19);
 }
 
@@ -833,9 +836,11 @@ article h4:hover {
 	border: none;
 	padding-left: 20px;
 }
+
 #sign-up .container form input[type="submit"] {
-  padding: 13px 16px;
+	padding: 13px 16px;
 }
+
 #sign-up .container .text-info h4 {
 	font-size: 1.5rem;
 }
@@ -877,14 +882,11 @@ article h4:hover {
 }
 
 #footer .group-items .item:last-child .footer-group-icon-apps i.fa-qrcode {
-  padding: 5px 7px;
+	padding: 5px 7px;
 }
+
 #footer .group-items .item:last-child .footer-group-icon-apps i.fa-apple,
-#footer
-	.group-items
-	.item:last-child
-	.footer-group-icon-socials
-	i.fa-instagram {
+#footer .group-items .item:last-child .footer-group-icon-socials i.fa-instagram {
 	padding: 5px 8px;
 }
 
@@ -1480,7 +1482,7 @@ article h4:hover {
 	height: 16px;
 }
 
-#payment main.step-2 .pay input[type="radio"] + label {
+#payment main.step-2 .pay input[type="radio"]+label {
 	font-size: 1.3rem;
 }
 
@@ -1604,7 +1606,7 @@ section#hotel-features .hotel-album {
 	background-color: rgb(6, 100, 69);
 }
 
-#filter-hotel .group-choices ul li.list-choices div:first-child:hover + div {
+#filter-hotel .group-choices ul li.list-choices div:first-child:hover+div {
 	display: block;
 }
 
@@ -1635,16 +1637,11 @@ section#hotel-features .hotel-album {
 	transform: scale(1);
 }
 
-#filter-hotel .group-choices ul li.list-choices div:first-child:hover + div {
+#filter-hotel .group-choices ul li.list-choices div:first-child:hover+div {
 	transform: scale(1);
 }
 
-#filter-hotel
-	.group-choices
-	ul
-	li.list-choices
-	div:first-child:hover
-	+ div:hover {
+#filter-hotel .group-choices ul li.list-choices div:first-child:hover+div:hover {
 	transform: scale(1);
 }
 
@@ -1664,14 +1661,7 @@ section#hotel-features .hotel-album {
 	font-size: 0.9rem;
 }
 
-#filter-hotel
-	.group-choices
-	ul
-	li.list-choices
-	.tab
-	ul
-	li
-	input[type="checkbox"] {
+#filter-hotel .group-choices ul li.list-choices .tab ul li input[type="checkbox"] {
 	width: 18px;
 	height: 18px;
 	position: relative;
@@ -1792,23 +1782,11 @@ section#hotel-features .hotel-album {
 	margin-bottom: 20px;
 }
 
-#list-hotels-result
-	main
-	.hotel-items
-	.item
-	.hotel-item-content
-	.hotel-item-img
-	.header-img
-	img {
+#list-hotels-result main .hotel-items .item .hotel-item-content .hotel-item-img .header-img img {
 	width: 450px;
 }
 
-#list-hotels-result
-	main
-	.hotel-items
-	.item
-	.hotel-item-content
-	.hotel-item-img {
+#list-hotels-result main .hotel-items .item .hotel-item-content .hotel-item-img {
 	width: 55%;
 }
 
@@ -1917,26 +1895,32 @@ section#hotel-features .hotel-album {
 }
 
 /* sign up - main page */
-#sign-up-main, #sign-in-main {
+#sign-up-main,
+#sign-in-main {
 	background: url("../img/hcm_.jpg") no-repeat center center/cover;
 	font-family: Arial, Helvetica, sans-serif;
 }
-#sign-up-main .sign-up-box, #sign-in-main .sign-in-box {
+
+#sign-up-main .sign-up-box,
+#sign-in-main .sign-in-box {
 	background-color: rgba(135, 207, 235, 0.9);
 	width: 350px;
 	margin: 0.2rem auto;
 	padding: 1rem;
 	border-radius: 3px;
 }
+
 #sign-in-main .sign-in-box {
 	padding: 4rem 1.5rem;
 }
+
 #sign-up-main .sign-up-box .form-group label,
 #sign-in-main .sign-in-box .form-group label {
 	margin: 0.6rem 0;
 	display: block;
 	font-size: 1.3rem;
 }
+
 #sign-up-main .sign-up-box .form-group input,
 #sign-in-main .sign-in-box .form-group input {
 	display: block;
@@ -1949,6 +1933,7 @@ section#hotel-features .hotel-album {
 	font-size: 1.2rem;
 	padding-left: 0.5rem;
 }
+
 #sign-up-main .sign-up-box .form-group .request-box input[type="checkbox"] {
 	display: inline;
 	width: 20px;
@@ -1957,6 +1942,7 @@ section#hotel-features .hotel-album {
 	position: relative;
 	top: 4px;
 }
+
 #sign-up-main .sign-up-box .form-group input[type="submit"],
 #sign-in-main .sign-in-box .form-group input[type="submit"] {
 	color: #fff;
@@ -1974,14 +1960,17 @@ section#hotel-features .hotel-album {
 	justify-content: space-between;
 	margin: 1rem auto;
 }
+
 #sign-in-main .sign-in-box .other-sign-in-choices i {
 	padding: 0.3rem;
 	border: 3px #014029 solid;
 	border-radius: 5px;
 }
+
 #sign-in-main .sign-in-box .other-sign-in-choices i.fa-facebook {
 	color: var(--info-color);
 }
+
 #sign-in-main .sign-in-box .other-sign-in-choices i.fa-google {
 	color: rgb(0, 0, 0, 0.8);
 }
